// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lint with @linter/provider-eslint text and filePath 1`] = `
Array [
  Object {
    "errorCount": 0,
    "filePath": "test.js",
    "messages": Array [],
    "warningCount": 0,
  },
]
`;

exports[`Lint with @linter/provider-eslint with no linter for file extension 1`] = `
Array [
  Object {
    "errorCount": 0,
    "filePath": "foo.ts",
    "messages": Array [],
    "warningCount": 0,
  },
]
`;

exports[`Lint with no installed linter providers 1`] = `"No linter providers found. Please install at least one linter provider package."`;
